fixed contrast issues

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,5 +1,5 @@
 :root {
-    --heading-text-color: #DA413B;
+    --heading-text-color: white;
     --paragraph-text-color: #2E2C2D;
     --padding: 1rem;
     --border: 1px solid rgb(0 0 0 / 0.1);
